<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/createClientLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/intial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/intialDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:drawableRight="@drawable/drop_down"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="Initial"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/firstName"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lastName"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/company_name"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/companyNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/personal_email"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/mobile_number"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/login_margin"
                android:background="@drawable/square_button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="Delete"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/login_margin"
                android:background="@drawable/square_button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="Update"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>