<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/createClientLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/login_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/clint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/selectClient"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/selectClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:drawableRight="@drawable/drop_down"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/street"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/streetEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/state"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/stateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/zipcode"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/zipcodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/country"
                android:textColor="@android:color/black"
                android:visibility="visible" />

            <EditText
                android:id="@+id/countryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/txt_bg"
                android:cursorVisible="true"
                android:maxLength="100"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black" />
        </LinearLayout>
  <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/login_margin"
                android:background="@drawable/square_button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="Delete"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/login_margin"
                android:background="@drawable/square_button_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="Update"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>